[package]
name = "sumup"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "SumUp API"

[dependencies]
log = "0.4"
serde_json = "1.0"
thiserror = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.ureq]
version = "2.5"
features = ["json"]

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
